2013-03-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h: Add macro to
	return vdso values correctly in IFUNC implementations.
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c (__gettimeofday):
	Optimization by	using IFUNC.

2012-11-20  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/sh/dl-machine.h (ELF_MACHINE_RUNTIME_FIXUP_PARAMS): New
	macro.

2012-11-14  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14831]
	* elf/Makefile (tests): Add tst-audit8.
	($(objpfx)tst-audit8): Also depend on $(common-objpfx)math/libm.so.
	($(objpfx)tst-audit8.out): New target.
	(tst-audit8-ENV): New variable.
	* elf/dl-runtime.c (_dl_profile_fixup): Call _dl_fixup to skip
	audit if l_reloc_result is NULL.
	(ELF_MACHINE_RUNTIME_FIXUP_PARAMS): Issue an error if it isn't
	defined and ELF_MACHINE_RUNTIME_FIXUP_ARGS is defined.
	* elf/tst-audit8.c: New file.

2012-10-04  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14648]
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Set bit_FMA_Usable if FMA is supported.
	* sysdeps/x86_64/multiarch/init-arch.h (bit_FMA_Usable): New
	macro.
	(bit_FMA4_Usable): Updated.
	(index_FMA_Usable): New macro.
	(CPUID_FMA): Likewise
	(HAS_FMA): Defined with bit_FMA_Usable.

2012-09-28  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #6530]
	* stdio-common/vfprintf.c (process_string_arg): Revert
	2000-07-22 change.

2012-07-06  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #14042]
	* sysdeps/powerpc/powerpc32/ppc-mcount.S [SHARED]: Don't use PLT
	for call to __mcount_internal.
	* sysdeps/powerpc/powerpc32/Makefile (sysdep_routines)
	(shared-only-routines) [$(subdir) = gmon]: Add compat-ppc-mcount.
	* sysdeps/powerpc/powerpc32/compat-ppc-mcount.S: New file.

2011-09-28  Jonathan Nieder  <jrnieder@gmail.com>

	* stdio-common/Makefile (tst-sprintf-ENV): Set environment
	for testcase.
	* stdio-common/tst-sprintf.c: Include <locale.h>
	(main): Test sprintf's handling of incomplete multibyte